force-app/main/default/objects/WorkOrder/fields/HRCFSL_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Activity_Type__c</fullName>
    <description>for storing the Activity type informaiton on the work order object. story#30</description>
    <label>#Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HRCFSL_Doc_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HRCFSL_Activity_Type</valueSetName>
    </valueSet>
</CustomField>