force-app/main/default/objects/WorkOrder/fields/HRCFSL_Asset_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Asset_Product_Family__c</fullName>
    <description>Product Family from the associated Asset. Needed to be sent to JDE via work order integration. HF-67.</description>
    <formula>IF(NOT( ISBLANK(TEXT(HRCSV_Product__r.Family) ) ),Text(HRCSV_Product__r.Family) ,
IF(NOT( ISBLANK(Asset.HRCFSL_Real_Product_Family__c) ),Asset.HRCFSL_Real_Product_Family__c,  HRCFSL_Product_Family__c ))</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>