force-app/main/default/objects/WorkOrder/fields/HRCFSL_Asset_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Asset_Product_Model__c</fullName>
    <description>For storing the asset Product Model</description>
    <formula>IF(NOT( ISBLANK(  HRCSV_Product__r.HRCSVC_Product_Model__c  ) ),HRCSV_Product__r.HRCSVC_Product_Model__c,
IF(NOT( ISBLANK(  Asset.HRCFSL_Product_Family__c   ) ),Asset.HRCFSL_Product_Family__c, HRCFSL_Product_Model__c ))</formula>
    <label>Product Model</label>
    <type>Text</type>
</CustomField>