force-app/main/default/objects/WorkOrder/fields/HRCFSL_Assigned_Engineer_Completed__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Assigned_Engineer_Completed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Assigned Engineer Completed</label>
    <type>Checkbox</type>
</CustomField>