force-app/main/default/objects/WorkOrder/fields/HRCFSL_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Doc_Type__c</fullName>
    <description>For storing the Doc Type information of the work type (Story#HF-30)</description>
    <label>#Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCFSL_Doc_Type</valueSetName>
    </valueSet>
</CustomField>