force-app/main/default/objects/WorkOrder/fields/HRCFSL_Earliest_Labor_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Earliest_Labor_Date__c</fullName>
    <label>Earliest Labor Date</label>
    <summarizedField>WorkOrderLineItem.HRCFSL_Labor_Date__c</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>