force-app/main/default/objects/WorkOrder/fields/HRCFSL_Extended_Instructions__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Extended_Instructions__c</fullName>
    <description>Field to story extended information that cannot fit in the &apos;Special Instructions&apos; field.</description>
    <label>Extended Instructions</label>
    <length>450</length>
    <type>LongTextArea</type>
</CustomField>