force-app/main/default/objects/WorkOrder/fields/HRCFSL_First_Time_Fix__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_First_Time_Fix__c</fullName>
    <formula>HRCFSL_Earliest_Labor_Date__c = HRCFSL_Latest_Labor_Date__c</formula>
    <label>First Time Fix</label>
    <type>Checkbox</type>
</CustomField>