force-app/main/default/objects/WorkOrder/fields/HRCFSL_Latest_Labor_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Latest_Labor_Date__c</fullName>
    <label>Latest Labor Date</label>
    <summarizedField>WorkOrderLineItem.HRCFSL_Labor_Date__c</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>