force-app/main/default/objects/WorkOrder/fields/HRCFSL_ModList__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_ModList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Action/Mod</label>
    <referenceTo>HRCFSL_ModList__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>