force-app/main/default/objects/WorkOrder/fields/HRCFSL_Num_of_WOLIs__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Num_of_WOLIs__c</fullName>
    <description>number of line items on a work order</description>
    <label># of WOLIs</label>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>