force-app/main/default/objects/WorkOrder/fields/HRCFSL_Printed__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Printed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SE-406</description>
    <label>Printed</label>
    <type>Checkbox</type>
</CustomField>