force-app/main/default/objects/WorkOrder/fields/HRCFSL_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product_Family__c</fullName>
    <defaultValue>&apos;family&apos;</defaultValue>
    <description>Product Family</description>
    <label>Product Family (Do Not Use)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>