force-app/main/default/objects/WorkOrder/fields/HRCFSL_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product_Model__c</fullName>
    <defaultValue>&apos;.&apos;</defaultValue>
    <label>Product Model (Do Not Use)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>