force-app/main/default/objects/WorkOrder/fields/HRCFSL_Purge_Patient_Info__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Purge_Patient_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SE-851</description>
    <label>Purge Patient Info</label>
    <type>Checkbox</type>
</CustomField>