force-app/main/default/objects/WorkOrder/fields/HRCFSL_Tech_Generated__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Tech_Generated__c</fullName>
    <formula>If( CONTAINS(
$CustomMetadata.HRCFSL_Organization_Settings__mdt.HRCFSL_Technician_Profile.HRCFSL_Component_Detail__c , CreatedBy.Profile.Name
) &amp;&amp; NOT(ISBLANK(CreatedBy.Profile.Name)),
True, False )</formula>
    <label>Tech Generated?</label>
    <type>Checkbox</type>
</CustomField>