force-app/main/default/objects/WorkOrder/fields/HRCFSL_Technician_has_Skills__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Technician_has_Skills__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Technician has Skills?</label>
    <type>Checkbox</type>
</CustomField>