force-app/main/default/objects/WorkOrder/fields/HRCFSL_Work_Order_Age__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Work_Order_Age__c</fullName>
    <formula>HRCFSL_Actual_End__c -  CreatedDate</formula>
    <label>Work Order Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>