force-app/main/default/objects/WorkOrder/fields/HRCFSL_Work_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Work_Type_Name__c</fullName>
    <description>for storing the related work type Name.</description>
    <formula>TEXT( WorkType.HRCFSL_Doc_Type__c ) + TEXT( WorkType.HRCFSL_Activity_Type__c )</formula>
    <label>Work Type</label>
    <type>Text</type>
</CustomField>