force-app/main/default/objects/WorkOrder/fields/HRCSV_Product__c.field-meta.xml
<CustomField>
    <fullName>HRCSV_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>