force-app/main/default/objects/WorkOrder/fields/HRCSVC20_Repair_Template_Question_3b__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Repair_Template_Question_3b__c</fullName>
    <description>Used for storing repair template question 3b) Document troubleshooting:</description>
    <label>Repair Template Question 3b</label>
    <type>TextArea</type>
</CustomField>