force-app/main/default/objects/WorkOrder/fields/HRCSVC20_Repair_Template_Question_5a__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Repair_Template_Question_5a__c</fullName>
    <description>Used for storing repair template question 5a) Resolution:</description>
    <label>Repair Template Question 5a</label>
    <type>TextArea</type>
</CustomField>