force-app/main/default/objects/WorkOrder/fields/HRCSVC21_Has_CQ__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Has_CQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#SE-2431: checkbox to check if a WO has a CQ or not</description>
    <label>Has CQ?</label>
    <type>Checkbox</type>
</CustomField>