force-app/main/default/objects/WorkOrder/fields/HRCSVC_Accept_Reject__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Accept_Reject__c</fullName>
    <description>Blank field used on the quote template so that customers can have some free space to indicate whether they accept or reject the quote. SE-45</description>
    <formula>&apos;&apos;</formula>
    <label>Accept/Reject</label>
    <type>Text</type>
</CustomField>