force-app/main/default/objects/WorkOrder/fields/HRCSVC_Admin_Completed__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Admin_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a checkbox that is used to mark Work Orders as Admin Complete so they can be identified for reporting purposes. SE-1303.</description>
    <label>Admin Completed?</label>
    <type>Checkbox</type>
</CustomField>