force-app/main/default/objects/WorkOrder/fields/HRCSVC_AssetWarrantyId__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_AssetWarrantyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Warranty</label>
    <referenceTo>HRCSVC_Asset_Warranty__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>