force-app/main/default/objects/WorkOrder/fields/HRCSVC_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Bill To)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Bill To)</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>