force-app/main/default/objects/WorkOrder/fields/HRCSVC_Bypass_VR__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Bypass_VR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass VR</label>
    <type>Checkbox</type>
</CustomField>