force-app/main/default/objects/WorkOrder/fields/HRCSVC_Concession_Approved_by__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Concession_Approved_by__c</fullName>
    <label>Concession Approved by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>