force-app/main/default/objects/WorkOrder/fields/HRCSVC_Concession_By__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Concession_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concession By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>