force-app/main/default/objects/WorkOrder/fields/HRCSVC_Concession_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Concession_Date__c</fullName>
    <label>Concession Date</label>
    <type>Date</type>
</CustomField>