force-app/main/default/objects/WorkOrder/fields/HRCSVC_Concession_Reason__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Concession_Reason__c</fullName>
    <label>Concession Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>