force-app/main/default/objects/WorkOrder/fields/HRCSVC_Correction_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Correction_Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A task to correct the attached documentation will be assigned to this user when Doc Status is set to &apos;Pending Correction&apos;</inlineHelpText>
    <label>Correction Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>