force-app/main/default/objects/WorkOrder/fields/HRCSVC_Customer_City__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Customer_City__c</fullName>
    <formula>Location.HRCFSL_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer City</label>
    <type>Text</type>
</CustomField>