force-app/main/default/objects/WorkOrder/fields/HRCSVC_Customer_Not_Responded_Since__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Customer_Not_Responded_Since__c</fullName>
    <description>This is field is used to calculate the customer response days.
Developed for #SE-46</description>
    <formula>IF(ISNULL(HRCSVC_Latest_Quote_Status_Change__c),0,NOW()-HRCSVC_Latest_Quote_Status_Change__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Not Responded Since</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>