force-app/main/default/objects/WorkOrder/fields/HRCSVC_Customer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Customer_Postal_Code__c</fullName>
    <formula>Location.HRCFSL_Postal_CD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Postal Code</label>
    <type>Text</type>
</CustomField>