force-app/main/default/objects/WorkOrder/fields/HRCSVC_Customer_State__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Customer_State__c</fullName>
    <formula>Location.HRCFSL_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer State</label>
    <type>Text</type>
</CustomField>