force-app/main/default/objects/WorkOrder/fields/HRCSVC_Customer_Street__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Customer_Street__c</fullName>
    <formula>Location.HRCFSL_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Street</label>
    <type>Text</type>
</CustomField>