force-app/main/default/objects/WorkOrder/fields/HRCSVC_Depot_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Depot_Activity_Type__c</fullName>
    <label>Depot Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAL</fullName>
                <label>CAL - Calibration</label>
            </value>
            <value>
                <fullName>CON</fullName>
                <label>CON - Consignment</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>CR - Credit Return</label>
            </value>
            <value>
                <fullName>CVN</fullName>
                <label>CVN - Convention</label>
            </value>
            <value>
                <fullName>EVL</fullName>
                <label>EVL - Evaluation</label>
            </value>
            <value>
                <fullName>EXP</fullName>
                <label>EXP - Expedite Service</label>
            </value>
            <value>
                <fullName>FSC</fullName>
                <label>FSC - Field Service Call</label>
            </value>
            <value>
                <fullName>IAC</fullName>
                <label>IAC - IntraCo</label>
            </value>
            <value>
                <fullName>IEC</fullName>
                <label>IEC - InterCo</label>
            </value>
            <value>
                <fullName>LNR</fullName>
                <label>LNR - Loaner</label>
            </value>
            <value>
                <fullName>OCS</fullName>
                <label>OCS - Outside Contractor Services</label>
            </value>
            <value>
                <fullName>PPM</fullName>
                <label>PPM - Planned Preventive Maintenance</label>
            </value>
            <value>
                <fullName>RCL</fullName>
                <label>RCL - Recall</label>
            </value>
            <value>
                <fullName>REF</fullName>
                <label>REF - Refurb</label>
            </value>
            <value>
                <fullName>TRD</fullName>
                <label>TRD - Trade In</label>
            </value>
            <value>
                <fullName>TRI</fullName>
                <label>TRI - Trial</label>
            </value>
            <value>
                <fullName>UPG</fullName>
                <label>UPG - Upgrade</label>
            </value>
            <value>
                <fullName>WTY</fullName>
                <label>WTY - Wty Replace</label>
            </value>
            <value>
                <fullName>ZER</fullName>
                <label>ZER - Service Replaced</label>
            </value>
            <value>
                <fullName>ZEX</fullName>
                <label>ZEX - Exchange</label>
            </value>
            <value>
                <fullName>ZSC</fullName>
                <label>ZSC - Service Contract</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>