force-app/main/default/objects/WorkOrder/fields/HRCSVC_Doc_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Doc_Status__c</fullName>
    <label>Doc Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PR</fullName>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>PC</fullName>
                <label>Pending Correction</label>
            </value>
            <value>
                <fullName>RC</fullName>
                <label>Review Completed</label>
            </value>
            <value>
                <fullName>CIP</fullName>
                <label>Correction In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>