force-app/main/default/objects/WorkOrder/fields/HRCSVC_Entitlement_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Entitlement_Name__c</fullName>
    <formula>Entitlement.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement Name</label>
    <type>Text</type>
</CustomField>