force-app/main/default/objects/WorkOrder/fields/HRCSVC_Field_Action_Mod_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Field_Action_Mod_Description__c</fullName>
    <description>SE-257 - The Field Action/Mod Description needs to be displayed as read only on the work order</description>
    <formula>HRCFSL_ModList__r.HRCSVC_Description__c</formula>
    <label>Field Action/Mod Description</label>
    <type>Text</type>
</CustomField>