force-app/main/default/objects/WorkOrder/fields/HRCSVC_Is_On_Site_Repair__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Is_On_Site_Repair__c</fullName>
    <formula>ISPICKVAL(HRCFSL_Activity_Type__c, &quot;Y&quot;)</formula>
    <label>Is On-Site Repair?</label>
    <type>Checkbox</type>
</CustomField>