force-app/main/default/objects/WorkOrder/fields/HRCSVC_Item_Number_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Item_Number_Description__c</fullName>
    <label>Item Number Description</label>
    <type>TextArea</type>
</CustomField>