force-app/main/default/objects/WorkOrder/fields/HRCSVC_Latest_Quote_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Latest_Quote_Status_Change__c</fullName>
    <description>This field is used to track the change in Quote Status field.
Developed for #SE-46</description>
    <label>Latest Quote Status Change</label>
    <type>DateTime</type>
</CustomField>