force-app/main/default/objects/WorkOrder/fields/HRCSVC_No_Charge_Concession__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_No_Charge_Concession__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be checked if the work order should be provided without billing.</description>
    <label>No Charge Concession</label>
    <type>Checkbox</type>
</CustomField>