force-app/main/default/objects/WorkOrder/fields/HRCSVC_Non_Standard_Config_Details__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Non_Standard_Config_Details__c</fullName>
    <description>SE-260 - This fields value is fetched from Asset.</description>
    <formula>Asset.HRCSVC_Non_Standard_Config_Details__c</formula>
    <label>Non-Standard Config Details</label>
    <type>Text</type>
</CustomField>