force-app/main/default/objects/WorkOrder/fields/HRCSVC_Non_Standard_Configuration__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Non_Standard_Configuration__c</fullName>
    <description>SE-260 - This fields value is fetched from Asset.</description>
    <formula>Asset.HRCSVC_Non_Standard_Configuration__c</formula>
    <label>Non-Standard Configuration?</label>
    <type>Checkbox</type>
</CustomField>