force-app/main/default/objects/WorkOrder/fields/HRCSVC_Product_Family_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Product_Family_Description__c</fullName>
    <label>Product Family Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>