force-app/main/default/objects/WorkOrder/fields/HRCSVC_Protocol_Category__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Protocol_Category__c</fullName>
    <label>Protocol Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCSVC_Protocol_Category</valueSetName>
    </valueSet>
</CustomField>