force-app/main/default/objects/WorkOrder/fields/HRCSVC_Quote_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quote_Grand_Total__c</fullName>
    <description>The grand total used for quotes which includes quoted parts on this work order as well as on any child work orders.</description>
    <label>Quote Grand Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>