force-app/main/default/objects/WorkOrder/fields/HRCSVC_Quote_Individual_Total__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quote_Individual_Total__c</fullName>
    <label>Quoted Total</label>
    <summarizedField>HRCFSL_Quoted_Part__c.HRCSVC_Total_Price__c</summarizedField>
    <summaryForeignKey>HRCFSL_Quoted_Part__c.HRCFSL_Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>