force-app/main/default/objects/WorkOrder/fields/HRCSVC_Quote_Notes__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quote_Notes__c</fullName>
    <label>Quote Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>