force-app/main/default/objects/WorkOrder/fields/HRCSVC_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quote_Status__c</fullName>
    <defaultValue>&quot;Quote Prepared&quot;</defaultValue>
    <label>Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Prepared</fullName>
                <default>true</default>
                <label>Quote Prepared</label>
            </value>
            <value>
                <fullName>Quote Sent</fullName>
            </value>
            <value>
                <fullName>Quote Follow-Up 1</fullName>
            </value>
            <value>
                <fullName>Quote Follow-Up 2</fullName>
            </value>
            <value>
                <fullName>No Reply</fullName>
            </value>
            <value>
                <fullName>Quote Accepted</fullName>
            </value>
            <value>
                <fullName>Quote Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>