force-app/main/default/objects/WorkOrder/fields/HRCSVC_Quoted_Recommended_Repairs_Total__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quoted_Recommended_Repairs_Total__c</fullName>
    <label>Quoted Recommended Repairs Total</label>
    <summarizedField>HRCFSL_Quoted_Part__c.HRCSVC_Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>HRCFSL_Quoted_Part__c.HRCSVC_Type__c</field>
        <operation>equals</operation>
        <value>Recommended</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>HRCFSL_Quoted_Part__c.HRCSVC_Coverage__c</field>
        <operation>equals</operation>
        <value>Billable</value>
    </summaryFilterItems>
    <summaryForeignKey>HRCFSL_Quoted_Part__c.HRCFSL_Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>