force-app/main/default/objects/WorkOrder/fields/HRCSVC_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Record_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>