force-app/main/default/objects/WorkOrder/fields/HRCSVC_Reg_Open__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Reg_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as Part  of SE-271</description>
    <label>Reg Open</label>
    <type>Checkbox</type>
</CustomField>