force-app/main/default/objects/WorkOrder/fields/HRCSVC_Related_Work_order_Id__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Related_Work_order_Id__c</fullName>
    <description>SE-1008 : contains the related WO id (SQY type) which it refers.</description>
    <label>Related Work order Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>