force-app/main/default/objects/WorkOrder/fields/HRCSVC_Remote_Tech_Support__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Remote_Tech_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Tech Support</label>
    <type>Checkbox</type>
</CustomField>