force-app/main/default/objects/WorkOrder/fields/HRCSVC_Rental_Enabled__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Rental_Enabled__c</fullName>
    <formula>IF($CustomMetadata.HRCFSL_Organization_Settings__mdt.Rental_Enabled.HRCFSL_Component_Detail__c = &quot;FALSE&quot;, FALSE, TRUE)</formula>
    <label>Rental Enabled</label>
    <type>Checkbox</type>
</CustomField>