force-app/main/default/objects/WorkOrder/fields/HRCSVC_Serial_Number_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Serial_Number_Status__c</fullName>
    <formula>TEXT(Asset.HRCFSL_Asset_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Serial Number Status</label>
    <type>Text</type>
</CustomField>