force-app/main/default/objects/WorkOrder/fields/HRCSVC_Service_Center_Address__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Center_Address__c</fullName>
    <formula>ServiceTerritory.Street &amp; &apos; &apos; &amp;  ServiceTerritory.City &amp; &apos; &apos; &amp; ServiceTerritory.State &amp; &apos; &apos; &amp; ServiceTerritory.PostalCode &amp; &apos; &apos; &amp;  ServiceTerritory.Country</formula>
    <label>Service Center Address</label>
    <type>Text</type>
</CustomField>