force-app/main/default/objects/WorkOrder/fields/HRCSVC_Software_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Software_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Software Version</label>
    <referenceTo>HRCSVC_Software_Version__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>