force-app/main/default/objects/WorkOrder/fields/HRCSVC_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Sub_Status__c</fullName>
    <description>SE-73</description>
    <label>Sub Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Prepared</fullName>
            </value>
            <value>
                <fullName>Quote Sent</fullName>
            </value>
            <value>
                <fullName>Quote Follow-up Call 1</fullName>
            </value>
            <value>
                <fullName>Quote Follow-up Call 2</fullName>
            </value>
            <value>
                <fullName>Quote - No Response</fullName>
            </value>
            <value>
                <fullName>Quote Accepted</fullName>
            </value>
            <value>
                <fullName>Quote Rejected</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Requires Info Payment/Method</fullName>
            </value>
            <value>
                <fullName>At the Benches</fullName>
            </value>
            <value>
                <fullName>TEST QUEUE</fullName>
            </value>
            <value>
                <fullName>Notified Outside Contractor</fullName>
            </value>
            <value>
                <fullName>Fwd  to Outside Contractor</fullName>
            </value>
            <value>
                <fullName>Rec&apos;d from Outside Contractor</fullName>
            </value>
            <value>
                <fullName>Holding for parts</fullName>
            </value>
            <value>
                <fullName>Under Eng.Evaluation</fullName>
            </value>
            <value>
                <fullName>Holding for Failure Analysis</fullName>
            </value>
            <value>
                <fullName>Holding for Tech Support</fullName>
            </value>
            <value>
                <fullName>Holding_Miscellaneous</fullName>
            </value>
            <value>
                <fullName>No Longer Repairable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>