force-app/main/default/objects/WorkOrder/fields/HRCSVC_Work_Center__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Work_Center__c</fullName>
    <label>Work Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>