force-app/main/default/objects/WorkOrder/fields/OnSite_Repair__c.field-meta.xml
<CustomField>
    <fullName>OnSite_Repair__c</fullName>
    <formula>IF( ISPICKVAL(HRCFSL_Activity_Type__c,&quot;Y&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OnSite Repair</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>