force-app/main/default/objects/WorkOrder/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <formula>IF(
ISNULL(EntitlementId),
&quot;Contract&quot;,
IF(
NOT(ISNULL(HRCSVC_AssetWarrantyId__c)) ,
&quot;Warranty&quot;,
&quot;Fee for Service&quot;
)
)</formula>
    <label>Service Level</label>
    <type>Text</type>
</CustomField>