force-app/main/default/objects/WorkOrder/recordTypes/HRCFSL_Capital_Field_Service.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Capital_Field_Service</fullName>
    <active>true</active>
    <description>Generic record type for all Capital Field Service Work Orders.</description>
    <label>Capital Field Service</label>
</RecordType>