force-app/main/default/objects/WorkOrder/recordTypes/HRCFSL_Capital_Other.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Capital_Other</fullName>
    <active>true</active>
    <label>Capital Other</label>
</RecordType>