force-app/main/default/objects/WorkOrder/recordTypes/HRCFSL_Capital_Other_w_Parts.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Capital_Other_w_Parts</fullName>
    <active>true</active>
    <label>Capital Other w Parts</label>
</RecordType>