force-app/main/default/objects/WorkOrder/recordTypes/HRCFSL_Capital_Preventative.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Capital_Preventative</fullName>
    <active>true</active>
    <label>Capital Preventative</label>
</RecordType>