force-app/main/default/objects/WorkOrder/recordTypes/HRCFSL_Capital_Repair.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Capital_Repair</fullName>
    <active>true</active>
    <label>Capital Repair</label>
</RecordType>