force-app/main/default/objects/WorkOrder/recordTypes/HRCFSL_Quote.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Quote</fullName>
    <active>true</active>
    <description>Used for field service quotes.</description>
    <label>Quote</label>
</RecordType>