force-app/main/default/objects/WorkOrder/recordTypes/HRCFSL_Rental.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Rental</fullName>
    <active>true</active>
    <description>Generic record type for all Rental Field Service Work Orders.</description>
    <label>Rental</label>
</RecordType>