force-app/main/default/objects/WorkOrder/recordTypes/HRCFSL_Rental_BPI.recordType-meta.xml
<RecordType>
    <fullName>HRCFSL_Rental_BPI</fullName>
    <active>true</active>
    <label>Rental BPI</label>
</RecordType>